@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+plugins/cfpython/cfpython.c: fix invalid options when empty parameter.
+Nicolas Weeger 2007-12-26
+
 Add support for user-defined events. Those can be called from the Python plugin.
     server/plugins.c
     plugins/common/include/plugin_common.h
